--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,14 @@ jobs:
       - name: Clean old builds
         run: rm $GITHUB_WORKSPACE/builds/*.cs3
 
-      - name: Setup JDK 11
-        uses: actions/setup-java@v1
+      - name: Setup JDK 23
+        uses: actions/setup-java@v4.6.0
         with:
-          java-version: 11
+          distribution: adopt
+          java-version: 23
 
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
+        uses: android-actions/setup-android@v3.2.2
 
       - name: Build Plugins
         run: |
